# spamGuard

./: AUTHORS  CHANGELOG  COPYING  FAQ  INSTALL  Makefile  Makefile-dist  Makefile.am  Makefile.in  POST-INSTALL  README  README.DigitalUnix  README.sendmail  THANKS  UPGRADE  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  functions.c  functions.h  hash.c  hash.h  loadconfig.c  loadconfig.h  main.c  parser.c  parser.h  qsheff_ignore  qsheff_ignore.sample  qsheff_parser.c  qsheff_parser.h  spam-ignore.txt.sample  spamguard.conf  spamguard.conf.in  spamguard.conf.sample  spamguard_exim.conf  spamguard_exim.conf.sample  (+5 more)
autom4te.cache/: output.1  requests  traces.0  traces.1
tr/: BENIOKU  BENIOKU.DigitalUnix  COPYING  DEGISIKLIKLER  GUNCELLEME  KURULUM  KURULUM-SONRASI  Makefile  Makefile.am  Makefile.in  SSS  YAZARLAR
