#EnderUNIX spamguard/tr Makefile.am file

spamguard_doc_trdir= ${prefix}/share/doc/spamguard/tr
spamguard_doc_tr_DATA =  BENIOKU\
	BENIOKU.DigitalUnix\
	COPYING\
	DEGISIKLIKLER\
	GUNCELLEME\
	KURULUM\
	KURULUM-SONRASI\
	YAPILACAKLAR\
	YAZARLAR

EXTRA_DIST = ${spamguard_doc_tr_DATA}


#This is not a gnu project. So we don't have to obey gnu package needz!
AUTOMAKE_OPTIONS = foreign

# set the include path found by configure
INCLUDES= $(all_includes)

